<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Solar Panel Manager</string>
    <string name="splash_activity_logo">Android \nSolar \nPanel \nManager</string>
    <string name="splash_activity_version"> Version 1.0</string>
    <string name="main_activity_logo"> MENU</string>
    <string name="ok">OK</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_change_device">Change Device</string>
    <string name="title_activity_splash"> SolarSplashActivity</string>
    <string name="title_activity_device_list">DeviceListActivity</string>
    <string name="button_connect_device">Connect to existing device</string>
    <string name="button_add_device">Add a new device</string>
    <string name="button_settings">Battery settings</string>
    <string name="set_min_max_title">Set Min/Max Charge Levels</string>
    <string name="set_time_update">Set Device Time</string>
    <string name="set_location_update">Set Device Location</string>
    <string name="set_location_update_title">Set Device Location</string>
    <string name="set_location_update_message">Are you sure you\'d like to update the device\'s current location?</string>
    <string name="set_time_title">Set Device Time</string>
    <string name="set_time_message">Are you sure you\'d like to update the device\'s current time?</string>
    <string name="set_pass_phrase_title">Set Pass Phrase</string>
    <string name="set_pass_phrase_message">Enter a new pass phrase.</string>
    <string name="set_min_max_row">Set Min/Max Charge Levels</string>
    <string name="button_about">About</string>
    <string name="button_historical_data">Display Historical Data</string>
    <string name="bluetooth_not_available">Bluetooth Not Available</string>
    <string name="bluetooth_not_available_message">It seems your device does not support Bluetooth. This application will not work without it. We apologize</string>
    <string name="title_activity_history_graph">HistoryGraphActivity</string>
    <string name="title_activity_historical_graph">HistoricalGraph</string>
    <string name="battery_main">Battery Settings</string>
    <string name="battery_voltage">Battery voltage</string>
	<string name="min_charge_label">Minimum charge level</string>
	<string name="max_charge_label">Maximum charge level</string>
    <string name="battery_in">In</string>
    <string name="battery_out">Out</string>
    <string name="battery_estimatedtime">Estimated Time</string>
    <string name="Timestamp">Time Stamp</string>
    <string name="battery_curr">Battery Current</string>
    <string name="min">Minimum</string>
    <string name="max">Maximum</string>
    <string name="min_label">Min: </string>
    <string name="max_label">Max: </string>
    <string name="Loading">Loading</string>
    <string name="Communicating">Communicating with device</string>
    <string name="failed_communication">Communication Failed</string>
    <string name="connection_error">Could not connect to this device</string>
    <string name="bluetooth_warning">bluetooth not enabled; cannot continue</string>
    <string name="rescan">Rescan</string>
    <string name="PV_voltage">PV Voltage</string>
    <string name="PV_current">PV Current</string>
    <string name="battery_percent">Battery Percent</string>
    <string name="zero">0</string>
    <string name="button_bluetooth_settings">Pair Device</string>
    <string name="pairing_memo">You must pair with your installation controller before it can be added as a known device.</string>
    <string name="title_activity_known_devices">KnownDevicesActivity</string>
    <string name="general_settings">General Settings</string>
    <string name="power_user_mode">Power User Mode Enabled</string>
    <string name="power_user_message_title">Enable Power User Mode?</string>
    <string name="power_user_warning">Are you sure that you would like to enable power user mode? Some of these setting could be dangerous to the solar panel.</string>
    <string name="confirm">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="menu_schedule">Schedule</string>
    <string name="menu_device_settings">Device Settings</string>
    <string name="power_settings">Power User Settings</string>
    <string name="power_settings_label">Power User Options</string>
    <string name="pass_phrase">Security Passphrase</string>
    <string name="forbidden_error_title">Permission Forbidden</string>
    <string name="device_connection_error_title">Device Connection Error</string>
    <string name="device_connection_error">Could not find the device. Bluetooth may be off or the device may be out of range.</string>
    <string name="forbidden_error">This device cannot confirm your security passphrase. Maybe check your settings?</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="menu_history">History</string>
    <string name="menu_calendar">Calendar</string>
    <string name="calendar_main">Scheduled Events</string>
    <string name="title_activity_add_event">AddEventActivity</string>
    <string name="action_settings">Settings</string>
    <string name="events_delete_confirm_title">Delete Event</string>
    <string name="events_delete_confirm_message">Do you want to delete this event?</string>
    <string name="calendar_add_start">Start Time (hh:mm)</string>
    <string name="calendar_add_duration">Duration (hh:mm)</string>
    <string name="calendar_add_interval">Interval (hh:mm)</string>
    <string name="calendar_add_name">Name</string>
    <string name="calendar_add">Add</string>
    <string name="calendar_add_event_button">Add Event</string>
    <string name="recover_device">Recover Device Passphrase</string>
    <string name="recover_device_message">Enter the old password for the device</string>
    <string name="error_setting_password">Error Setting Password</string>
    <string name="menu_rescan">Rescan</string>
    <string name="menu_home">Home</string>
    <string name="menu_activity_add_event_title">Add Event</string>
    <string name="menu_activity_application_preferences_title">Application Preferences</string>
    <string name="menu_activity_calendar_title">Calendar</string>
    <string name="menu_activity_choose_device_title">Choose Device</string>
    <string name="menu_activity_device_preferences_title">Device Preferences</string>
    <string name="menu_activity_history_graph_title">Device History</string>
    <string name="menu_activity_main_device_title">Solar Panel Manager</string>
</resources>