<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/button_connect_device"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_connect_device" />

    <Button
        android:id="@+id/button_settings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_connect_device"
        android:text="@string/button_settings" />
        
    <Button
        android:id="@+id/button_about"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_settings"
        android:text="@string/button_about" />
    
    <Button
        android:id="@+id/button_historical_data"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_about"
        android:text="@string/button_historical_data" />

</RelativeLayout>