<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddEventActivity" >
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/calendar_add_start"
        android:textSize="10pt"  />
    
    <EditText
        android:id="@+id/StartTime"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/calendar_add_duration" 
        android:textSize="10pt"  />
    
    <EditText
        android:id="@+id/Duration"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"  />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/calendar_add_interval"
        android:textSize="10pt"  />
    
    <EditText
        android:id="@+id/Interval"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"  />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/calendar_add_name"
        android:textSize="10pt"  />
    
    <EditText
        android:id="@+id/Name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"  />
    
    <Button 
        android:id="@+id/AddButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/calendar_add"  />

</LinearLayout>